updates for BEM and relative units

--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -8,14 +8,16 @@ Dark green: #28b485
 */
 
 /* css reset */
-* {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
 }
 
 html {
-    font-size: 10px;
+    font-size: 62.5%;
 }
 
 /* over-all text properties */
@@ -27,6 +29,7 @@ body {
     line-height: 1.7;
     color: #777;
     padding: 30px;
+    box-sizing: border-box;
 }
 
 .header {
@@ -43,17 +46,17 @@ body {
     clip-path: polygon(0 0, 100vw 0, 100vw 75vh, 0 100vh);
 }
 
-.logo-box {
+.header__logo-box {
     position: absolute;
     top: 4rem;
     left: 4rem;
 }
 
-.logo {
+.header__logo {
     height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
     position: absolute;
     top: 40%;
     left: 50%;
@@ -68,7 +71,7 @@ body {
     margin-bottom: 6rem;
 }
 
-.heading-primary-main {
+.heading-primary--main {
    display: block;
    font-size: 6rem;
    font-weight: 400;
@@ -80,7 +83,7 @@ body {
    animation-timing-function: ease-out;
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
     display: block;
     font-size: 2rem;
     font-weight: 700;
@@ -153,7 +156,7 @@ body {
     box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .2) 
 }
 
-.btn-white {
+.btn--white {
     background-color: white;
     color: #777;
 }
@@ -176,11 +179,11 @@ body {
     opacity: 0;
 }
 
-.btn-white::after {
+.btn--white::after {
     background-color: white;
 }
 
-.btn-animated {
+.btn--animated {
     animation: moveInBottom 1s ease-in .75s;
     animation-fill-mode: backwards;
 }
