start converting css to SASS

--- a/Natours/starter/sass/layout/_header.scss
+++ b/Natours/starter/sass/layout/_header.scss
@@ -10,7 +10,7 @@
     position: relative;
     clip-path: polygon(0 0, 100vw 0, 100vw 75vh, 0 100vh);
 
-    &__log-box {
+    &__logo-box {
         position: absolute;
         top: 4rem;
         left: 4rem;
