--- a/Natours/starter/sass/abstracts/_variables.scss
+++ b/Natours/starter/sass/abstracts/_variables.scss
@@ -8,6 +8,9 @@ $color-grey-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+// fonts
+$default-font-size: 1.6rem;
+
 // grid
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
